@@ -1,3 +1,8 @@
+2003-10-30  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* scrollw.tcl (ScrolledWindow::setwidget): check that the old
+	widget associated still exists before unconfiguring it. [Bug #833034]
+
 2003-10-27  Damon Courtney  <damon@unreality.com>
 
 	* combobox.tcl, listbox.tcl: Fixed keyboard navigation in the
